--- a/src/index.scss
+++ b/src/index.scss
@@ -7,3 +7,8 @@ $font-family: 'DM Sans', sans-serif;
 body{
   background-color: $background-color;
 }
+.profile img{
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+}
