--- a/src/index.scss
+++ b/src/index.scss
@@ -6,6 +6,7 @@ $font-family: 'DM Sans', sans-serif;
 
 body{
   background-color: $background-color;
+  color: $color;
 }
 .profile img{
   border-radius: 50%;
