--- a/src/index.scss
+++ b/src/index.scss
@@ -28,3 +28,11 @@ body{
   flex-direction: $Cards-flex-direction;
 
 }
+.row-one{
+  display:$Cards-display;
+  flex-direction: $Cards-flex-direction;
+}
+.row-two{
+  display:$Cards-display;
+  flex-direction: $Cards-flex-direction;
+}
