--- a/src/index.scss
+++ b/src/index.scss
@@ -14,8 +14,8 @@ body{
 }
 .profile img{
   border-radius: 50%;
-  width: 100px;
-  height: 100px;
+  width: 60px;
+  height: 60px;
   @include borderMixin(3px, white);
 }
 .tracking-content{
@@ -44,4 +44,7 @@ flex-direction: column;
   margin: 0 auto;
   margin-top: 250px;
   background-color: #333;
+}
+.info{
+background-color: aquamarine;
 }
