--- a/src/index.scss
+++ b/src/index.scss
@@ -39,12 +39,13 @@ flex-direction: column;
   display: flex;
   flex-direction: column;
   width: 900px;
-  
+  height: 500px;
   margin: 0 auto;
   margin-top: 250px;
   background-color: #333;
 }
 .info{
 background-color: aquamarine;
+margin-left: 20px;
 
 }
