--- a/src/index.scss
+++ b/src/index.scss
@@ -64,7 +64,8 @@ gap: 5px;
   width: 1200px;
   height: 600px;
   margin: 0 auto;
-  margin-top: 250px;
+  margin-top: 200px;
+  margin-left: 400px;
   background-color: #333;
 }
 .info{
