--- a/src/index.scss
+++ b/src/index.scss
@@ -27,6 +27,15 @@ $cards-gap: 15px;
   
 }
 
+$card-colors: (
+  work: hsl(15, 100%, 70%),
+  play: hsl(195, 74%, 62%),
+  study: hsl(348, 100%, 68%),
+  exercise: hsl(145, 58%, 55%),
+  social: hsl(264, 64%, 52%),
+  self: hsl(43, 84%, 65%)
+);
+
 
 *{
   margin: 0;
@@ -90,7 +99,4 @@ background-color: crimson;
 }
 .work-back, .play-back, .study-back, .exercise-back, .social-back, .self-back {
   @include card-back-style;
-}
-.work-back{
-  background-color: hsl(15, 100%, 70%);
 }
