--- a/src/index.scss
+++ b/src/index.scss
@@ -110,7 +110,10 @@ background-color: hsl(235, 46%, 20%);
 }
 .info{
   width: 250px;
-  height: 250px;
+  height: 300px;
   border-radius: 8px;
   background-color: hsl(246, 80%, 60%);
+}
+.times{
+  margin-top:150px;
 }
