--- a/src/index.scss
+++ b/src/index.scss
@@ -19,8 +19,9 @@ $info-font-family: 'Rubik', sans-serif;
   padding: 20px;
   width: 220px;
   height:170px;
-  margin-top: 40px;
+  margin-top: -10px;
   background-color: hsl(235, 46%, 20%);
+  z-index: 3;
 }
 @mixin card-back-style {
   border: 0;
@@ -29,6 +30,7 @@ $info-font-family: 'Rubik', sans-serif;
   width: 220px;
   height: 210px;
   margin-top: 40px;
+  
   
 }
 @mixin cardStyleHover {
@@ -154,4 +156,10 @@ background-color: hsl(235, 46%, 20%);
   margin-left: 30px;
   font-family:$info-font-family;
   font-weight: 300;
+}
+.work-icon img, .play-icon img, .study-icon img, .exercise-icon img, .social-icon img, .self-icon img{
+  width: 50px;
+  height: 50px;
+  margin-left: 150px;
+  z-index: -1;
 }
