--- a/src/index.scss
+++ b/src/index.scss
@@ -157,6 +157,9 @@ background-color: hsl(235, 46%, 20%);
   font-family:$info-font-family;
   font-weight: 300;
 }
+.work-icon, .play-icon, .study-icon, .exercise-icon, .social-icon, .self-icon{
+  z-index: -2;
+}
 .work-icon img, .play-icon img, .study-icon img, .exercise-icon img, .social-icon img, .self-icon img{
   width: 50px;
   height: 50px;
