--- a/src/index.scss
+++ b/src/index.scss
@@ -167,7 +167,8 @@ background-color: hsl(235, 46%, 20%);
   z-index: -1;
 }
 .hours p{
-  color: red;
+  font-size: 40px;
   font-family:$info-font-family;
+  font-weight: 300;
 
 }
