--- a/src/index.scss
+++ b/src/index.scss
@@ -179,3 +179,11 @@ background-color: hsl(235, 46%, 20%);
   font-weight: 300;
   margin-top: 10px;
 }
+.ellips img{
+  margin-top: 20px;
+}
+.activity{
+  display: flex;
+  flex-direction: row;
+  gap: 40px;
+}
