--- a/src/index.scss
+++ b/src/index.scss
@@ -179,6 +179,9 @@ background-color: hsl(235, 46%, 20%);
   font-family:$info-font-family;
   font-weight: 300;
   margin-top: 10px;
+  width: 250px;
+  height: 20px;
+ 
 }
 .ellips img{
   margin-top: 20px;
