--- a/src/index.scss
+++ b/src/index.scss
@@ -113,9 +113,10 @@ background-color: hsl(235, 46%, 20%);
 .work-card, .play-card, .study-card, .exercise-card, .social-card, .self-card {
   @include card-style;
 }
-.work-card:hover, .play-card:hover, .study-card:hover, .exercise-card:hover, .social-card:hover, .self-card:hover {
-  @include cardStyleHover;
+ .work-card:hover,.play-card:hover, .study-card:hover, .exercise-card:hover, .social-card:hover, .self-card:hover {
+  background-color: red;
 }
+
 .work-back, .play-back, .study-back, .exercise-back, .social-back, .self-back {
   @include card-back-style;
 }
