--- a/src/index.scss
+++ b/src/index.scss
@@ -211,17 +211,24 @@ background-color: hsl(235, 46%, 20%);
     display: flex;
     flex-direction: column;
     gap: 20px;
+    margin-left: -20px;
   }
   .row-two{
     display: flex;
     flex-direction: column;
     gap: 20px;
     margin-top: 0px;
+    margin-left: -20px;
   }
   .text-content{
     display: flex;
     flex-direction: column;
     gap: 20px;
+  }
+  .ifo{
+    margin-top: -550px;
+    height: 200px;
+    margin-left: 50px;
   }
   
 }
