--- a/src/index.scss
+++ b/src/index.scss
@@ -218,7 +218,7 @@ background-color: hsl(235, 46%, 20%);
     gap: 20px;
     margin-top: 0px;
   }
-  .text-content{
+  .tracking-content{
     display: flex;
     flex-direction: column;
     gap: 20px;
