--- a/src/index.scss
+++ b/src/index.scss
@@ -35,6 +35,15 @@ $info-font-family: 'Rubik', sans-serif;
   
   
 }
+@mixin card-back-mobile-style {
+  border: 0;
+  border-radius: 12px;
+  margin: 10px;
+  width: 300px;
+  height: 100px;
+  margin-top: 40px;
+  z-index: -1;
+}
 $card-colors: (
   work: hsl(15, 100%, 70%),
   play: hsl(195, 74%, 62%),
@@ -222,5 +231,31 @@ background-color: hsl(235, 46%, 20%);
     display: flex;
     flex-direction: column;
     gap: 20px;
+  }
+  .info-back{
+    margin-left: 0px;
+    margin-top: 0px;
+    width: 100%;
+    height: 100px;
+    border-radius: 12px;
+    background-color: red;
+  }
+  .info{
+    width: 100%;
+    height: 50px;
+    border-radius: 12px;
+    background-color: hsl(246, 80%, 60%);
+  }
+  .info h1{
+    font-size: 16px;
+  }
+  .info h2{
+    font-size: 20px;
+  }
+  .work-back, .play-back, .study-back, .exercise-back, .social-back, .self-back {
+    @include card-back-style;
+    width: 100%;
+    height: 100px;
+    margin-top: 0px;
   }
 }
