--- a/src/index.scss
+++ b/src/index.scss
@@ -247,25 +247,9 @@ background-color: hsl(235, 46%, 20%);
     gap: 20px;
   }
   .info-back{
-    margin-left: 0px;
-    margin-top: 0px;
-    width: 100%;
-    height: 100px;
-    border-radius: 12px;
-    background-color: red;
+    width: 300px;
   }
-  .info{
-    width: 100%;
-    height: 50px;
-    border-radius: 12px;
-    background-color: hsl(246, 80%, 60%);
-  }
-  .info h1{
-    font-size: 16px;
-  }
-  .info h2{
-    font-size: 20px;
-  }
+
   .work-back, .play-back, .study-back, .exercise-back, .social-back, .self-back {
     @include card-back-mobile-style;
     
