--- a/src/index.scss
+++ b/src/index.scss
@@ -248,6 +248,7 @@ background-color: hsl(235, 46%, 20%);
   }
   .info-back{
     width: 300px;
+    height: 100px;
   }
 
   .work-back, .play-back, .study-back, .exercise-back, .social-back, .self-back {
