--- a/src/InfoComponent.scss
+++ b/src/InfoComponent.scss
@@ -98,11 +98,13 @@ $info-font-family: 'Rubik', sans-serif;
       .info h1 {
         font-size: 14px;
         margin-left: 160px;
+        margin-top: -60px;
       }
       
       .info h2 {
         font-size: 20px;
         margin-left: 160px;
+        width: 200px;
       }
       
       .info {
