--- a/src/InfoComponent.scss
+++ b/src/InfoComponent.scss
@@ -118,13 +118,16 @@ $info-font-family: 'Rubik', sans-serif;
         width: 300px;
         height: 150px;
       }
-      
       .side-nav {
-        display: flex;
-        flex-direction: row;
-        background-color: red;
+        flex-direction: row; 
+        justify-content: space-between; 
+        align-items: center;
+        margin-top: 10px;
+        margin-left: 20px;
       }
+    
       .side-nav a {
-        font-size: 14px;
+        font-size: 14px; 
       }
     }
+    
