--- a/src/index.scss
+++ b/src/index.scss
@@ -46,6 +46,7 @@ $info-font-family: 'Rubik', sans-serif;
   height: 210px;
   margin-top: 40px;
   z-index: -1;
+  gap: 20px;
   
   
 }
@@ -224,7 +225,7 @@ background-color: hsl(235, 46%, 20%);
     width: 100%;
     height: 100%;
     margin: 0 auto;
-    margin-top: 180px;
+    margin-top: 120px;
     margin-left: 0px;
     display: flex;
     flex-direction: column;
@@ -244,15 +245,15 @@ background-color: hsl(235, 46%, 20%);
     display: flex;
     flex-direction: column;
     gap: 20px;
+    margin-top: -20px;
   }
 
   .work-back, .play-back, .study-back, .exercise-back, .social-back, .self-back {
     @include card-back-mobile-style;
-    
-   
   }
   .work-card, .play-card, .study-card, .exercise-card, .social-card, .self-card {
     @include card-mobile-style;
+   
    
   }
   .hours p{
